<resources>
    <string name="app_name" translatable="false">LatexDroid</string>
    <!-- Welcome activity -->
    <string name="welcome_title_text">Welcome to LatexDroid!</string>
    <string name="welcome_subtitle_text">Nice to see you!</string>
    <string name="start_button_text">Start work</string>
        <!-- Content descriptions -->
    <string name="config_button_desc">Open the configs.</string>
    <!-- Configuration dialog -->
    <string name="config_dialog_title">Configuration</string>
    <string name="dialog_positive_button">Set</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="ip_label" translatable="false">IP</string>
    <string name="ip_hint">Latex server IP address</string>
    <string name="app_id_label" translatable="false">App ID</string>
    <string name="app_id_hint" translatable="false">Wolfram App ID</string>
    <!-- Main activity -->
    <string name="main_title">Input your equation or upload an image</string>
    <string name="input_field_hint">Your equation</string>
    <string name="calculate_button_text">Calculate</string>
    <string name="answer_hint_text">The answer will be here</string>
    <string name="error_text">Error occurred</string>
        <!-- Content descriptions -->
    <string name="clear_button_desc">Clear the input field.</string>
    <string name="gallery_button_desc">Upload an image from device.</string>
    <string name="camera_button_desc">Capture image.</string>
    <string name="answer_window_desc">The window for answer display.</string>
    <!-- Network -->
    <string name="server_ip_address" translatable="false">34.116.195.134</string>
    <string name="wolfram_app_id" translatable="false">K6T6J7-EPP65Y7RHG</string>
    <string name="network_established_message">You are back online!</string>
    <string name="network_not_found_message">You are offline. The application functional is limited.</string>
</resources>