<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    tools:context=".activities.WelcomeActivity">

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title_text"
        android:textColor="@color/primary_text_color"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <TextView
        android:id="@+id/welcome_subtitle"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/welcome_subtitle_text"
        android:textColor="@color/primary_text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/welcome_title"
        app:layout_constraintTop_toBottomOf="@+id/welcome_title"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="136dp"
        android:layout_height="46dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="300dp"
        android:backgroundTint="@color/secondary_color"
        android:onClick="onStartClick"
        android:text="@string/start_button_text"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/welcome_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/welcome_subtitle"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="lollipop" />

    <ImageButton
        android:id="@+id/configButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:contentDescription="@string/config_button_desc"
        android:onClick="onConfigClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_config_button" />
</androidx.constraintlayout.widget.ConstraintLayout>